@@ -19,7 +19,7 @@ m4_include([libcurl.m4])
 
 LIBOFX_MAJOR_VERSION=0
 LIBOFX_MINOR_VERSION=8
-LIBOFX_MICRO_VERSION=3
+LIBOFX_MICRO_VERSION=4
 LIBOFX_VERSION=$LIBOFX_MAJOR_VERSION.$LIBOFX_MINOR_VERSION.$LIBOFX_MICRO_VERSION
 
 AC_SUBST(LIBOFX_MAJOR_VERSION)
@@ -28,8 +28,8 @@ AC_SUBST(LIBOFX_MICRO_VERSION)
 AC_SUBST(LIBOFX_VERSION)
 AM_INIT_AUTOMAKE(libofx,$LIBOFX_VERSION)
 
-LIBOFX_SO_CURRENT=3
-LIBOFX_SO_REVISION=1
+LIBOFX_SO_CURRENT=4
+LIBOFX_SO_REVISION=0
 LIBOFX_SO_AGE=0
 LIBOFX_SO_EFFECTIVE="`echo \$(($LIBOFX_SO_CURRENT-$LIBOFX_SO_AGE))`"
 AC_SUBST(LIBOFX_SO_CURRENT)
